Change postgres to mysql

--- a/roles/infra/tasks/main.yml
+++ b/roles/infra/tasks/main.yml
@@ -23,13 +23,13 @@
     block: |
       DEPLOYMENT_ROOT={{ DEPLOYMENT_ROOT }}
 
-      POSTGRES_IMAGE={{ POSTGRES_IMAGE }}
+      MYSQL_IMAGE={{ MYSQL_IMAGE }}
       CASSANDRA_IMAGE={{ CASSANDRA_IMAGE }}
       ZOOKEEPER_IMAGE={{ ZOOKEEPER_IMAGE }}
       KAFKA_IMAGE={{ KAFKA_IMAGE }}
       SCHEMA_REGISTRY_IMAGE={{ SCHEMA_REGISTRY_IMAGE }}
 
-      POSTGRES_PASSWORD={{ POSTGRES_PASSWORD }}
+      MYSQL_ROOT_PASSWORD={{ MYSQL_ROOT_PASSWORD }}
       HOST_IP={{ HOST_IP }}
 
 - name: start docker
