--- a/roles/infra/files/docker-compose.yml
+++ b/roles/infra/files/docker-compose.yml
@@ -1,13 +1,13 @@
 version: "3"
 services:
-  postgres:
-    image: ${POSTGRES_IMAGE}
+  mysql:
+    image: ${MYSQL_IMAGE}
     ports:
-      - 35432:5432
+      - 33306:3306
     volumes:
-      - "postgres:/var/lib/postgresql/data:z"
+      - "mysql:/var/lib/mysql:z"
     environment:
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
     restart: always
   cassandra:
     image: ${CASSANDRA_IMAGE}
@@ -26,9 +26,9 @@ services:
     restart: always
   kafka:
     image: ${KAFKA_IMAGE}
-    network_mode: "host"
     depends_on:
       - zookeeper
+    network_mode: "host"
     volumes:
       - "kafka:/var/lib/kafka/data:z"
     environment:
@@ -38,16 +38,16 @@ services:
     restart: always
   schema-registry:
     image: ${SCHEMA_REGISTRY_IMAGE}
-    network_mode: "host"
     depends_on:
       - zookeeper
+    network_mode: "host"
     environment:
       - SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL=${HOST_IP}:32181
       - SCHEMA_REGISTRY_HOST_NAME=${HOST_IP}
       - SCHEMA_REGISTRY_LISTENERS=http://${HOST_IP}:38081
     restart: always
 volumes:
-  postgres:
+  mysql:
   cassandra:
   zookeeper:
   kafka:
