--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,5 @@
-*.class
-*.log
-
-# sbt specific
-.cache
-.history
-.lib/
-dist/*
-target/
-lib_managed/
-src_managed/
-project/boot/
-project/plugins/project/
-
-# Scala-IDE specific
-.scala_dependencies
-.worksheet
-
-# ScalaPB
-generated/
-
-# Eclipse
-.settings/
-.project
-.cproject
-
-# Intellij
-.idea/
-*.iml
-*.iws
-
 # Mac
 .DS_Store
 
-# Ansible
-*.inv
+# Ansible Inventory
+# *.yaml
