--- a/roles/infra/tasks/main.yml
+++ b/roles/infra/tasks/main.yml
@@ -1,37 +1,40 @@
 ---
 - name: create deployment directory
   file:
-    path: '{{ DEPLOYMENT_ROOT }}'
+    path: '{{ deployment_root }}'
     state: directory
     mode: 0755
 
 - name: copy docker-compose.yml
   copy:
     src: docker-compose.yml
-    dest: '{{ DEPLOYMENT_ROOT }}/docker-compose.yml'
+    dest: '{{ deployment_root }}/docker-compose.yml'
     owner: root
     group: root
     mode: 0644
 
 - name: generate .env
   blockinfile:
-    path: '{{ DEPLOYMENT_ROOT }}/.env'
+    path: '{{ deployment_root }}/.env'
     create: yes
     owner: root
     group: root
     mode: 0644
     block: |
-      DEPLOYMENT_ROOT={{ DEPLOYMENT_ROOT }}
+      DEPLOYMENT_ROOT={{ deployment_root }}
+      MYSQL_IMAGE={{ mysql_image }}
+      CASSANDRA_IMAGE={{ cassandra_image }}
+      ZOOKEEPER_IMAGE={{ zookeeper_image }}
+      KAFKA_IMAGE={{ kafka_image }}
+      MYSQL_ROOT_PASSWORD={{ mysql_root_password }}
+      HOST_IP={{ host_ip }}
 
-      MYSQL_IMAGE={{ MYSQL_IMAGE }}
-      CASSANDRA_IMAGE={{ CASSANDRA_IMAGE }}
-      ZOOKEEPER_IMAGE={{ ZOOKEEPER_IMAGE }}
-      KAFKA_IMAGE={{ KAFKA_IMAGE }}
-
-      MYSQL_ROOT_PASSWORD={{ MYSQL_ROOT_PASSWORD }}
-      HOST_IP={{ HOST_IP }}
+- name: pull docker images
+  command: /usr/local/bin/docker-compose pull
+  args:
+    chdir: '{{ deployment_root }}'
 
 - name: start docker
   command: /usr/local/bin/docker-compose up -d
   args:
-    chdir: '{{ DEPLOYMENT_ROOT }}'
+    chdir: '{{ deployment_root }}'
